[add] remove tasks function

--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,12 @@ body{
   cursor: pointer;
 }
 
+.input-area .error{
+  color: red;
+  margin-top: 10px;
+  font-size: 0.8rem;
+}
+
 .tasks-area{
   background-color: lightcyan;
   border-radius: 15px;
